--- a/assets/index.html
+++ b/assets/index.html
@@ -8,8 +8,9 @@
     <div class='container' id='main'>
       <div class='row'>
         <div class='twelve columns'>
-          <h1 id='title'>Hello Electron</h1>
-          <ul id='example' />
+          <h1 id='title'>Hello Electron!</h1>
+          <p>Here are some github repos for ya.</p>
+          <div id='content' />
         </div>
       </div>
     </div>
