use non-standard tag to make it look slightly more web-component-y

--- a/assets/index.html
+++ b/assets/index.html
@@ -10,7 +10,7 @@
         <div class='twelve columns'>
           <h1 id='title'>Hello Electron!</h1>
           <p>Here are some github repos for ya.</p>
-          <div id='content' />
+          <github-repos />
         </div>
       </div>
     </div>
